--- a/style.css
+++ b/style.css
@@ -1,8 +1,48 @@
 body{
+    font-size: 1.1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+h1{
+    margin-top: 0;
+}
+
 p{
     text-align: center;
 }
+
+.direction-to-how-to-use{
+    display: none;
+}
+
+ol{
+    max-width: 600px;
+}
+
+.github-repo-link{
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
+}
+
+a{
+    font-size: 1.4rem;
+}
+
+ @media(max-width: 768px){
+    .direction-to-how-to-use{
+        display: none;
+    }
+    .full-instructions-link{
+        display: block;
+    }
+ }
+ @media(min-width: 769px){
+    .direction-to-how-to-use{
+        display: block;
+    }
+    .full-instructions-link{
+        display: none;
+    }
+ }
