Add meta description and sections

--- a/style.css
+++ b/style.css
@@ -1,18 +1,30 @@
 body{
     font-size: 1.1rem;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
+    max-width: 600px;
+    display: block;
+    margin: 0 auto;
 }
-
 h1{
+    text-align: center;
     margin-top: 0;
 }
 
 p{
     text-align: center;
 }
+.intro-section h2{
+    text-align: center;
+}
+.about-p{
+    text-align: left;
+}
 
+h2{
+    text-align: left;
+}
 .direction-to-how-to-use{
     display: none;
 }
